--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "src/custom.d.ts"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "types": ["vite-plugin-svgr/client"]
 }
